Updates from ShareLaTeX

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -799,7 +799,7 @@ If we assume a dust opacity index $\beta=2$,
 which is conservative in that it provides the greatest difference in extinction
 between the two frequencies, the dust opacities required to produce the observed line ratio
 are $\tau_{345 \textrm{GHz}} = 2.8$ and $\tau_{100 \textrm{GHz}} = 0.2$.  These optical
-depth differences in the dust would result in a substantially ($\approx4\times$) higher 
+depth differences would result in a substantially ($\approx4\times$) higher 
 dust brightness at 0.85 \um than at 3 mm, which is not observed.
 }
 
@@ -822,21 +822,23 @@ dust brightness at 0.85 \um than at 3 mm, which is not observed.
 % temperatures.  We cannot strictly rule this possibility out because such
 % obscuration can occur on sub-beam scales. 
 While we cannot rule out the possibility that dust obscuration on sub-beam scales
-preferentially blocks our view of some of the high frequency salt emission, there
-is little evidence that the morphology of the emission region changes appreciably with frequency.
+preferentially blocks our view of some of the high frequency salt emission region, there
+is little evidence that the morphology of the emission changes appreciably with frequency.
 % However, the morphology of the salt
 % lines does not change with frequency.  
 Figure \ref{fig:resolutioncomparison}
 shows the images from Figure \ref{fig:spatial}, of a salt line in each frequency band,
 % selected  salt line from each of the observed frequency windows, as in
 % Figure \ref{fig:spatial}, 
-convolved to a common resolution.  If selective
-obscuration were a significant effect, we would expect to see progressively less
+convolved to the same resolution.  If selective
+obscuration were a significant effect, we might expect to see
+progressively less
 emission at higher frequencies, or perhaps missing emission at certain
-locations at higher frequencies.  There is a gap in the emission from the
+locations at higher frequencies.  There is a gap in the salt emission from the
 southwest part of the disk at 1.4 mm that becomes slightly more pronounced at
 0.87 mm,
 %% rlp: what do you mean by the southeast 'end' of the disk?
+%%% ag: bottom-left endpoint.  The brightest spot in the B6/1mm data.  That is southeast, right?
 % and the southeast end of the disk is brighter at 1.4 mm than at either
 % 3 mm or 0.87 mm, 
 but overall the morphology is similar in all wavebands when
@@ -903,9 +905,12 @@ transfer can also easily explain their non-detection (i.e., the continuum
 background is the same intensity as the emission lines).
 
 \referee{
-In this model, both SiO and the salts are in the gas phase outside of the disk
-midplane, where we assume they are incorporated into dust grains.  However, the
-SiO and NaCl have different morphology: low-J SiO lines are seen throughout the
+% In this model, both SiO and the salts are in the gas phase outside of the disk
+% midplane, where we assume they are incorporated into dust grains.  However, the
+Although in this model both SiO and NaCl are released from grains at the
+base of the outflow,
+% SiO and NaCl have different morphology: 
+low-J SiO lines are seen throughout the
 outflow at very high elevations above the disk, while the salt lines are
 limited to $\lesssim 30$ AU from the midplane.  Even the low-J salt lines,
 which can be excited at similar modest densities ($n\sim10^4$ to $10^6$
@@ -916,6 +921,7 @@ deplete back onto grains as they are entrained in the outflow, or they react to
 form other molecules, or they dissociate into atomic form while SiO remains
 molecular.
 }
+
 
 
 
