--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -781,8 +781,9 @@ suffer similar dust attenuation.}
 % exponentially decays vertically, the substructure within the beam is the
 % dominant uncertainty.  Despite this uncertainty, we can rule out opacity as the explanation of
 % the rotation temperatures by noting that
-It seems unlikely that dust extinction is the dominant effect in setting the observed
-line ratios.
+Comparison of the observed line and continuum ratios across the bands suggests
+that dust extinction is not the dominant effect governing the rotational
+temperature.
 The KCl v=0 lines, which are the only vibrational state detected in all three observed
 bands, have similar peak brightnesses at $\sim100$ and $\sim345$ GHz
 ($T_{B,max}(\textrm{KCl v=0 13-12}) = 15.3\pm0.9$ K and $T_{B,max}(\textrm{KCl
@@ -799,7 +800,7 @@ If we assume a dust opacity index $\beta=2$,
 which is conservative in that it provides the greatest difference in extinction
 between the two frequencies, the dust opacities required to produce the observed line ratio
 are $\tau_{345 \textrm{GHz}} = 2.8$ and $\tau_{100 \textrm{GHz}} = 0.2$.  These optical
-depth differences would result in a substantially ($\approx4\times$) higher 
+depths  would result in a substantially ($\approx4\times$) higher 
 dust brightness at 0.85 \um than at 3 mm, which is not observed.
 }
 
@@ -821,30 +822,28 @@ dust brightness at 0.85 \um than at 3 mm, which is not observed.
 % as the hotter inner disk, and therefore receive a biased view of the rotational
 % temperatures.  We cannot strictly rule this possibility out because such
 % obscuration can occur on sub-beam scales. 
-While we cannot rule out the possibility that dust obscuration on sub-beam scales
-preferentially blocks our view of some of the high frequency salt emission region, there
-is little evidence that the morphology of the emission changes appreciably with frequency.
-% However, the morphology of the salt
-% lines does not change with frequency.  
-Figure \ref{fig:resolutioncomparison}
-shows the images from Figure \ref{fig:spatial}, of a salt line in each frequency band,
-% selected  salt line from each of the observed frequency windows, as in
-% Figure \ref{fig:spatial}, 
-convolved to the same resolution.  If selective
-obscuration were a significant effect, we might expect to see
-progressively less
-emission at higher frequencies, or perhaps missing emission at certain
-locations at higher frequencies.  There is a gap in the salt emission from the
-southwest part of the disk at 1.4 mm that becomes slightly more pronounced at
-0.87 mm,
-%% rlp: what do you mean by the southeast 'end' of the disk?
-%%% ag: bottom-left endpoint.  The brightest spot in the B6/1mm data.  That is southeast, right?
-% and the southeast end of the disk is brighter at 1.4 mm than at either
-% 3 mm or 0.87 mm, 
-but overall the morphology is similar in all wavebands when
-viewed at the same resolution.  
-% We attribute the remaining residuals to the
-% different vibrational and rotational states selected for this comparison.
+Dust obscuration on sub-beam scales could preferentially block our view of some
+of the high frequency salt emission region, which would bias our measurements
+toward cooler rotational temperatures.  However, the morphology of the line
+emission does not change with frequency, suggesting that this effect is
+negligible.
+Figure \ref{fig:resolutioncomparison} shows the salt line images in each
+frequency band convolved to the same resolution, confirming that the morphological
+differences are minimal.
+% If selective obscuration were a significant effect, we might expect to see
+% progressively less emission at higher frequencies, or perhaps missing emission
+% at certain locations at higher frequencies.
+% There is a gap in the salt
+% emission from the southwest part of the disk at 1.4 mm that becomes slightly
+% more pronounced at 0.87 mm,
+% %% rlp: what do you mean by the southeast 'end' of the disk?
+% %%% ag: bottom-left endpoint.  The brightest spot in the B6/1mm data.  That is southeast, right?
+% % and the southeast end of the disk is brighter at 1.4 mm than at either
+% % 3 mm or 0.87 mm, 
+% but overall the morphology is similar in all wavebands when
+% viewed at the same resolution.  
+% % We attribute the remaining residuals to the
+% % different vibrational and rotational states selected for this comparison.
 }
 
 % resolution_comparison_nacl.py
@@ -917,7 +916,7 @@ which can be excited at similar modest densities ($n\sim10^4$ to $10^6$
 \percc), are not observed at high elevations.  Excitation therefore cannot
 explain the morphological difference between SiO and the salts, and instead we
 infer that they are chemically distinct.  Possibilities include that the salts
-deplete back onto grains as they are entrained in the outflow, or they react to
+deplete back onto grains as they are entrained in the outflow, they react to
 form other molecules, or they dissociate into atomic form while SiO remains
 molecular.
 }
