Updates from ShareLaTeX

--- a/extracted.bib
+++ b/extracted.bib
@@ -585,8 +585,10 @@
 
 @article{McGuire2018c,
   author =        {{McGuire}, B.~A.},
-  journal =       {ArXiv e-prints},
-  month =         sep,
+  journal =       {\apjs},
+  pages =         {17},
+  volume =        {239},
+  year =          {2018},
   title =         {{2018 Census of Interstellar, Circumstellar,
                    Extragalactic, Protoplanetary Disk, and Exoplanetary
                    Molecules}},
