--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -16,7 +16,7 @@
 % and I am too.
 
 \begin{abstract}
-    We report the detection of NaCl and KCl and their $^{37}$Cl and $^{41}$K
+    We report the detection of NaCl, KCl, and their $^{37}$Cl and $^{41}$K
     isotopologues toward the disk around Orion \sourcei.  About 60 transitions
     of these molecules were identified.
     This is the first detection of these molecules in the interstellar
@@ -33,7 +33,7 @@
     range.  We suggest that the molecules are produced by destruction of dust
     particles.  Because these molecules are so rare, they are potentially
     unique tools for identifying high-mass protostellar disks and measuring the
-    radiation environment around accreting young stars.
+    radiation environment around accreting young stars.\\
 \end{abstract}
 
 \section{Introduction}
@@ -52,8 +52,8 @@ the 5(5,0)-6(4,3) \water line in the disk and along the base of the outflow;
 these measurements showed that the interior mass was $15 \pm 2$ \msun.  In the
 same data, we found additional emission lines that closely traced the disk and
 its Keplerian rotation curve, but were unable to identify the molecular species
-responsible for these lines.  We now identify them as transitions of NaCl and
-KCl and their isotopologues, many in excited vibrational levels.
+responsible for these lines.  We now identify them as transitions of NaCl, 
+KCl, and their isotopologues, many in excited vibrational levels.
 
 % \rlp{I commented out this paragraph because some of it repeats what is
 % in the first paragraph, and the rest can be covered in the discussion.}
@@ -86,7 +86,7 @@ definitive disk detections are around stars that have already acquired most of
 their mass \citep[e.g.,][]{Girart2017a}.  The lack of clear disk detections
 is, at least in part, because there were no known spectral lines that trace a
 disk and not the molecule-rich ``hot core'' in the surrounding region
-\cite{Goddi2018a,Cesaroni2017a}.  For low-mass sources, where the disks are
+\citep{Goddi2018a,Cesaroni2017a}.  For low-mass sources, where the disks are
 observed in isolation after the surrounding core has accreted or dispersed,
 this ambiguity is absent.  For high-mass sources, which evolve so quickly that
 the disks are still embedded in their natal hot core, substantial confusion can
@@ -857,7 +857,7 @@ them convolved to the resolution of the 3 mm band (note that the 3 mm band
 image is unchanged, but is repeated because the color scale has changed), and
 the bottom row shows the difference images $T_{B,3 \mathrm{mm}} - T_{B, 1.4
 \mathrm{mm}}$ and $T_{B,3 \mathrm{mm}} - T_{B, 0.87 \mathrm{mm}}$.  }
-}
+
 \label{fig:resolutioncomparison}
 \end{figure*}
 
