re-extracted bib

--- a/extracted.bib
+++ b/extracted.bib
@@ -586,29 +586,31 @@
 @article{McGuire2018c,
   author =        {{McGuire}, B.~A.},
   journal =       {\apjs},
+  month =         dec,
   pages =         {17},
-  volume =        {239},
-  year =          {2018},
   title =         {{2018 Census of Interstellar, Circumstellar,
                    Extragalactic, Protoplanetary Disk, and Exoplanetary
                    Molecules}},
+  volume =        {239},
   year =          {2018},
   abstract =      {To date, 204 individual molecular species, comprised
                    of 16 different elements, have been detected in the
                    interstellar and circumstellar medium by astronomical
-                   observations. These molecules range in size from two
-                   atoms to seventy, and have been detected across the
-                   electromagnetic spectrum from cm-wavelengths to the
-                   ultraviolet. This census presents a summary of the
-                   first detection of each molecular species, including
-                   the observational facility, wavelength range,
-                   transitions, and enabling laboratory spectroscopic
-                   work, as well as listing tentative and disputed
-                   detections. Tables of molecules detected in
+                   observations. These molecules range in size from 2
+                   atoms to 70, and have been detected across the
+                   electromagnetic spectrum from centimeter wavelengths
+                   to the ultraviolet. This census presents a summary of
+                   the first detection of each molecular species,
+                   including the observational facility, wavelength
+                   range, transitions, and enabling laboratory
+                   spectroscopic work, as well as listing tentative and
+                   disputed detections. Tables of molecules detected in
                    interstellar ices, external galaxies, protoplanetary
                    disks, and exoplanetary atmospheres are provided. A
-                   number of visual representations of this aggregate
+                   number of visual representations of these aggregate
                    data are presented and briefly discussed in context.},
+  doi =           {10.3847/1538-4365/aae5d2},
+  eid =           {17},
 }
 
 @article{Nummelin1998a,
