--- a/extracted.bib
+++ b/extracted.bib
@@ -1906,6 +1906,50 @@
   eid =           {L3},
 }
 
+@article{Kim2018f,
+  author =        {{Kim}, D. and {Lu}, J.~R. and {Konopacky}, Q. and
+                   {Chu}, L. and {Toller}, E. and {Anderson}, J. and
+                   {Theissen}, C.~A. and {Morris}, M.~R.},
+  journal =       {arXiv e-prints},
+  month =         dec,
+  title =         {{Stellar Proper Motions in the Orion Nebula Cluster}},
+  year =          {2018},
+  abstract =      {The Orion Nebula Cluster (ONC) is the nearest site of
+                   ongoing massive star formation, which allows us to
+                   study the kinematics and dynamics of the region in
+                   detail and constrain star formation theories. Using
+                   HST ACS/WFPC2/WFC3IR and Keck II NIRC2 data, we have
+                   measured the proper motions of 701 stars within a
+                   $\sim6'\times6'$ field of view around the center of
+                   the ONC. We have found more than 10 escaping star
+                   candidates, concentrated predominantly at the core of
+                   the cluster. The proper motions of the bound stars
+                   are consistent with a normal distribution, albeit
+                   elongated North-South along the Orion filament, with
+                   proper motion dispersions of $(\sigma_{\mu,\alpha^*},
+                   \sigma_{\mu,\delta}) = (0.83\pm0.02,\,1.12\pm0.03)$
+                   mas yr$^{-1}$ or intrinsic velocity dispersions of
+                   $(\sigma_{v,\alpha^*}, \sigma_{v,\delta}) =
+                   (1.57\pm0.04,\,2.12\pm0.06)$ km s$^{-1}$ assuming a
+                   distance of 400 pc to the ONC. The cluster shows no
+                   evidence for tangential-to-radial anisotropy. Our
+                   velocity dispersion profile agrees with the
+                   prediction from the observed stellar + gas density
+                   profile from Da Rio et al. (2014), indicating that
+                   the ONC is in virial equilibrium. This finding
+                   suggests that the cluster was formed with a low star
+                   formation efficiency per dynamical timescale based on
+                   comparisons with current star formation theories. Our
+                   survey also recovered high-velocity IR sources BN,
+                   `x', and `n' in the BN/KL region. The estimated
+                   location of the first two sources $\sim500$ years ago
+                   agrees with that of the radio source `I', consistent
+                   with their proposed common origin from a
+                   multi-stellar disintegration. However, source `n'
+                   appears to have a small proper motion and is unlikely
+                   to have been involved in the event.},
+}
+
 @article{Silver1986a,
   author =        {{Silver}, J.~A. and {Worsnop}, D.~R. and
                    {Freedman}, A. and {Kolb}, C.~E.},
