a few more minor revisions

--- a/saltydisk.tex
+++ b/saltydisk.tex
@@ -1064,8 +1064,8 @@ region around \sourcei.
 
 The narrow vertical extent of the salt emission indicates that dust is
 destroyed nearly immediately after being raised from the surface of the disk.
-This hints that immediate dust destruction is an integral part of the outflow
-driving process.
+This morphology hints that immediate dust destruction is an integral part of
+the outflow driving process.
 
 Given the rarity of these molecules, if they can be detected elsewhere,
 they will serve as a powerful and unique probe of local conditions.
@@ -1078,7 +1078,7 @@ protostars and measure their kinematics.
 
 
 \acknowledgements
-We thank the anonymous referee for a productive and detailed review.
+We thank the anonymous referee for a constructive and detailed review.
 The National Radio Astronomy Observatory is a facility of the National Science
 Foundation operated under cooperative agreement by Associated Universities,
 Inc. The Green Bank Observatory is a facility of the National Science
@@ -1096,9 +1096,11 @@ Observatory is operated by ESO, AUI/NRAO and NAOJ.
 \software{
 The software used to make this version of the paper is available from github at
 \url{https://github.com/keflavich/Orion_ALMA_2016.1.00165.S}
-(\dataset[doi:10.5281/zenodo.1213350]{https://doi.org/10.5281/zenodo.1213350}) 
 with hash \githash
-(\gitdate).  The tools used include \texttt{spectral-cube}
+(\gitdate).
+The data are available from Zenodo at 
+\dataset[doi:10.5281/zenodo.1213350]{https://doi.org/10.5281/zenodo.1213350}. 
+The tools used include \texttt{spectral-cube}
 \citep[][and \url{https://github.com/radio-astro-tools/spectral-cube}]{Ginsburg2018SpectralCube}
 and
 \texttt{radio-beam} 
